# smcsd

./: .gitignore  .gitmodules  CLAUDE.md  DFLASH_EAGLE_GAMMA_SWEEP_REPORT.md  HIERARCHICAL_SMC_RESULTS.md  README.md  auto_smc_accuracy_debug.md  eagle_plan.md  paper.md  plan_mlp.md  progress.md  pyproject.toml  smcsd_eagle.md  updates.md
backups/: SMC_knowledge.md
docs/: progress.md
lesson/: 01-architecture-and-roles.md  02-ipc-protocol.md  03-draft-tail-buffer.md  04-verify-worker.md  05-drafter-runahead-and-rollback.md  06-modes-and-constraints.md  07-pr-landscape-and-roadmap.md  08-smcsd-implications.md  09-workflows.md  INDEX.md  README.md
megakernel/: .gitignore  BENCHMARK.md  HANDOFF.md  README.md  paper-outline.md
modal_apps/: download_quantized.py  push_quantized_to_hf.py  quantize_qwen_nvfp4.py  run_qwen_baseline.py  run_qwen_baseline_mmlu.py  run_qwen_baseline_nvfp4.py  run_smc_hybrid_qwen.py  validate_upstream.py
paper/: delayed_by_1_scoping.md  intro.md  mlsys-smcsd-systems.md  outline.md  results_m0_m1.md
scripts/: README.md  accuracy_test_gsm8k.py  accuracy_test_gsm8k_vllm.py  accuracy_test_gsm8k_vllm_baseline.py  accuracy_test_mmlu.py  bench_long_prompt.py  run_e2.sh  (+22 more)
ssd/: .gitignore  pyproject.toml
ssd/bench/: bench.py  bench_helpers.py  bench_paths.py  chat.py  compare_outputs.py  run_sglang_bench.py  run_vllm_bench.py
ssd/scripts/: download_from_hf.py
ssd/ssd/: __init__.py  paths.py
ssd/ssd/engine/: block_manager.py  draft_runner.py  llm_engine.py  model_runner.py
ssd/ssd/engine/helpers/: cudagraph_helpers.py  runner_helpers.py
(+257 files in other folders)
