[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ssd"
version = "0.2.0"
authors = [{ name = "Tanishq Kumar" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "Async tree-based speculative decoding research engine"
requires-python = ">=3.11"
dependencies = [
    "torch==2.9.1",
    "transformers==5.3.0",
    "xxhash==3.5.0",
    "numpy",
    "safetensors==0.6.2",
    "tqdm",
    "flashinfer_python==0.6.6",
    "flashinfer_cubin==0.6.6",
    "sglang-kernel==0.4.0",
    "nvidia-cutlass-dsl>=4.4.1",
    "wandb==0.22.0",
    "hf_transfer",
    "tiktoken",
]

[project.optional-dependencies]
scripts = [
    "datasets",
    "huggingface_hub",
]

[project.urls]
Homepage="https://github.com/tanishqkumar/ssd"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssd*"]
